# open3d_project_sample

./: CMakeLists.txt  Process_pc.cpp  README.md  setup_open3d.sh
